added FragranceSpecification that helps filtering in the backend, and made fetches paginated